Fix Navbar - Collapsed Dropdown-toggle button

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
-/* <<<<<<< HEAD */
-/* .fixed-footer {
+@import '~bootstrap/dist/css/bootstrap.css';
+
+.fixed-footer {
     position: fixed;
     bottom: 3%;
     width: 100%;
@@ -15,7 +16,4 @@
 }
 ::-webkit-scrollbar-thumb {
     background: #dad7d7;
-} */
-/* ======= */
-@import '~bootstrap/dist/css/bootstrap.css';
-/* >>>>>>> student */
+}
